fixed dark mode

--- a/darkmode.css
+++ b/darkmode.css
@@ -151,7 +151,7 @@ img {
 
 .listings img {
   width: 100%;
-  height: 10)%;
+  height: 100%;
   transition: 0.2s ease;
 }
 
